<resources>
    <string name="app_name">Sigfox Parking</string>
    <string name="api_key">AIzaSyDDJ6C_AF4pQxZeF18RV2PVjHf5Xe_kXmE</string>
    <string name="current_position">Aktuálna poloha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">Zoznam</string>
    <string name="map">Mapa</string>
    <string name="ar">AR</string>
    <string name="loading_failed">Nepodarilo sa načítať dáta.</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>
    <string name="description">Popis</string>
    <string name="show_more"><u>Zobraziť viac</u></string>
    <string name="show_less"><u>Zobraziť menej</u></string>
    <string name="norify_when_free">Upozorniť ma keď sa uvoľní miesto</string>
    <string name="parking_spots">Parkovacie miesta</string>
    <string name="navigate">Navigovať</string>
    <string name="notification_success">Požiadavka prebehla úspešne. Aplikácia Vás upozorní, keď sa uvoľní parkovacie meisto.</string>
    <string name="unknown_error">Neznáma chyba</string>
    <string name="logout">Odhlásiť</string>
    <string name="you_are_logged_out">Ste odhlásený</string>
    <string name="after_login">Obmedzené fungovanie aplikácie</string>
    <string name="login">Prihlásiť</string>
    <string name="home">Domov</string>
    <string name="reservations">Rezervácie</string>
    <string name="logon">Prihlásenie</string>
    <string name="email">Email</string>
    <string name="password">Heslo</string>
    <string name="no_account"><u>Nemáte účet? Zaregistrujte sa!</u></string>
    <string name="you_were_logged_in">Boli ste úspešne prihlásený!</string>
    <string name="error">Chyba</string>
    <string name="ok">OK</string>
    <string name="registration">Registrácia</string>
    <string name="repeat_password">Zopakovať heslo</string>
    <string name="name_surname">Meno a priezvisko</string>
    <string name="register">Registrovať</string>
    <string name="empty_name">Musíte vyplniť meno a priezvisko</string>
    <string name="empty_email">Musíte vyplniť email</string>
    <string name="passwords_dont_match">Heslá sa nezhodujú</string>
    <string name="password_short">Heslo musí obsahovať aspon 6 znakov</string>
    <string name="registration_success">Registrácia prebehla úspešne. Na Vašu emailovú adresu bol odoslaný overovací email.</string>
    <string name="reserve">Rezervovať</string>
    <string name="reserve_for_tomorow">Rezervovať na zajtra</string>
    <string name="reserved">Rezervované</string>
    <string name="reserved_for_tomorow">Rezervované na zajtra</string>
    <string name="currently_free">Aktualne: Voľné</string>
    <string name="currently_occupied">Aktualne: Obsadené</string>
    <string name="reservation">Rezervácia</string>
    <string name="unknown">Neznáma</string>
    <string name="reservation_description">Rezerváciu môžete vytvoriť na hociktorý nasledujúci deň, pokiaľ je voľný. Pokiaľ parkovacie miesto nie je voľné môžete skúsiť ďalšie parkovacie miesto. Rezerváciu môžete zrušiť maximálne deň pred tým ako ste chcecli parkovať.<br></br> Informácie o vozidle, ktorým budete parkovať potrebujeme, kvôli kontrole.</string>
    <string name="pick_car">Vyberte auto:</string>
    <string name="add_car">Pridať auto</string>
    <string name="car_not_picked">Musíte vybrať vozidlo, ktorým chcete zaparkovať</string>
    <string name="car_adding">Pridanie auta</string>
    <string name="brand">Značka*</string>
    <string name="model">Model*</string>
    <string name="year">Rok</string>
    <string name="licance_plate">ŠPZ*</string>
    <string name="color">Farba</string>
    <string name="add">Pridať</string>
    <string name="pick_date">Vyberte dátum</string>
    <string name="pick_date_title">Vyberte dátum:</string>
    <string name="date_not_picked">Musíte vybrať dátum rezervácie.</string>
    <string name="reservation_created">Rezrvácia vytvorená. Svoju rezerváciu môžete zrušiť v Rezrváciach, v Menu.</string>
    <string name="show_in_ar">Zobraziť pomocou AR</string>
    <string name="my_reservations">Moje Rezervácie</string>
    <string name="report">Nahlásiť</string>
    <string name="currently_reserved">Aktuálne: Rezervované</string>
    <string name="please_login">Pre rezervovanie musíte byť prihláseny</string>
    <string name="warning">Pozor!</string>
    <string name="reservation_delete_success">Rezerváciu sa podarilo úspešne zmazať</string>
    <string name="reservation_delete_failed">Rezervácie sa nepodarilo zmazať</string>
    <string name="question_delete_reservation">Naozaj si želáte zrušiť rezerváciu?</string>
    <string name="cancel">Zrušiť rezerváciu</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>