<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.auth.LoginActivity">

    <carbon.widget.RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sigfox_gradient"
        android:orientation="vertical"
        app:carbon_elevation="5dp">

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/appbar">

            <carbon.widget.RelativeLayout
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:onClick="back"
                android:padding="5dp"
                app:carbon_cornerRadius="12dp">

                <ImageView
                    android:id="@+id/positionIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_back" />


            </carbon.widget.RelativeLayout>

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reservation"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </carbon.widget.RelativeLayout>

    </carbon.widget.RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <carbon.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/reservation_description"
                android:textAlignment="center"
                android:textColor="@color/gradient_end"
                android:textSize="16sp" />
            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/pick_date_title"
                android:textAlignment="center"
                android:textColor="@color/gradient_end"
                android:textSize="20sp" />

            <carbon.widget.RelativeLayout
                android:id="@+id/pickDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                app:carbon_cornerRadius="10dp"
                app:carbon_stroke="@color/gradient_start"
                android:layout_marginTop="10dp"
                app:carbon_strokeWidth="2dp"
                android:background="@drawable/sigfox_input_gradient">

                <carbon.widget.TextView
                    android:id="@+id/pickDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/pick_date"
                    android:textColor="@color/gradient_end"
                    android:textSize="15sp" />

            </carbon.widget.RelativeLayout>

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/pick_car"
                android:textAlignment="center"
                android:textColor="@color/gradient_end"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <carbon.widget.RelativeLayout
                android:id="@+id/addCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/sigfox_input_gradient"
                app:carbon_cornerRadius="10dp">

                <carbon.widget.LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_add" />

                    <carbon.widget.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_car"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/gradient_end"
                        android:textSize="20sp" />
                </carbon.widget.LinearLayout>

            </carbon.widget.RelativeLayout>


            <carbon.widget.RelativeLayout
                android:id="@+id/reserve"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/sigfox_gradient"
                app:carbon_cornerRadius="10dp">

                <carbon.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/reserve"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </carbon.widget.RelativeLayout>


        </carbon.widget.LinearLayout>
    </androidx.core.widget.NestedScrollView>


</carbon.widget.LinearLayout>