<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.auth.LoginActivity">

    <carbon.widget.RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sigfox_gradient"
        android:orientation="vertical"
        app:carbon_elevation="5dp">

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/appbar">

            <carbon.widget.RelativeLayout
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:onClick="back"
                android:padding="5dp"
                app:carbon_cornerRadius="12dp">

                <ImageView
                    android:id="@+id/positionIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_back" />


            </carbon.widget.RelativeLayout>

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/logon"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </carbon.widget.RelativeLayout>

    </carbon.widget.RelativeLayout>

    <carbon.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <carbon.widget.RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/sigfox_input_gradient"
            app:carbon_cornerRadius="10dp"
            app:carbon_stroke="@color/gradient_start"
            app:carbon_strokeWidth="2dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/gradient_end"
                android:textColorHint="@color/hint_gray" />
        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/sigfox_input_gradient"
            app:carbon_cornerRadius="10dp"
            app:carbon_stroke="@color/gradient_start"
            app:carbon_strokeWidth="2dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/gradient_end"
                android:textColorHint="@color/hint_gray" />
        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sigfox_gradient"
            app:carbon_cornerRadius="10dp">

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            app:carbon_cornerRadius="10dp">

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_account"
                android:textColor="@color/gradient_start"
                android:textSize="15sp" />
        </carbon.widget.RelativeLayout>

    </carbon.widget.LinearLayout>


</carbon.widget.LinearLayout>